# project_umbrella

./: .gitignore  LICENSE  MODULE.bazel  interpreter
common/: structures.go  util.go
docs/: GRAMMAR.ebnf
examples/: call_nested.krait  call_with_multiple_arguments.krait  exponentiation.krait  factorial.krait  hello_world_multiple_values.krait  hello_world_nested.krait  hello_world_values.krait  primes.krait  range.krait  select.krait  value_storing_function.krait
parser/: bytecode.go  bytecode_cache.go  lexer.go  matcher.go  parser.go
runtime/: runtime.go  values.go
src/: startup_file.krait
src/interpreter/: BUILD.bazel  go.mod  go.sum  main.go
src/interpreter/bytecode_generator/: BUILD.bazel  bytecode.go  bytecode_cache.go
src/interpreter/bytecode_generator/built_in_declarations/: BUILD.bazel  built_in_declarations.go
src/interpreter/bytecode_generator/built_ins/: BUILD.bazel  built_ins.go
src/interpreter/common/: BUILD.bazel  structures.go  util.go
src/interpreter/environment_variables/: BUILD.bazel  environment_variables.go
src/interpreter/errors/: BUILD.bazel  code_highlighter.go  errors.go
src/interpreter/errors/entry_errors/: BUILD.bazel  entry_errors.go
src/interpreter/errors/lexer_errors/: BUILD.bazel  lexer_errors.go
src/interpreter/errors/parser_errors/: BUILD.bazel  parser_errors.go
src/interpreter/errors/runtime_errors/: BUILD.bazel  runtime_errors.go
src/interpreter/loader/: BUILD.bazel  loader_channel.go
src/interpreter/loader/file_loader/: BUILD.bazel  file_loader.go
src/interpreter/loader/library_loader/: BUILD.bazel  library_loader.go
src/interpreter/loader/module_loader/: BUILD.bazel  module_loader.go
src/interpreter/new_parser/: BUILD.bazel  lexer.go  main.go  parser.go  parser_abstract.go
src/interpreter/parser/: BUILD.bazel  bytecode.go  bytecode_cache.go  lexer.go  matcher.go  parser.go  parser_abstract.go
src/interpreter/parser/parser_types/: BUILD.bazel  fieldtype.go
src/interpreter/runtime/: BUILD.bazel  runtime.go  values.go
src/interpreter/runtime/built_in_definitions/: BUILD.bazel  built_in_definitions.go
src/interpreter/runtime/runtime_executor/: BUILD.bazel  runtime_executor.go
src/interpreter/runtime/value/: BUILD.bazel  value.go
src/interpreter/runtime/value_types/: BUILD.bazel  boolean_value.go  numeric_values.go  string_tuple_shared.go  string_value.go  tuple_value.go  unit_value.go
src/interpreter/runtime/value_types/bytecode_function/: BUILD.bazel  bytecode_function.go
src/interpreter/runtime/value_types/function/: BUILD.bazel  built_in_function.go  function.go
src/interpreter/runtime/value_util/: BUILD.bazel  lookup_field.go  universal_method_constructors.go  universal_methods.go
src/standard_library/: BUILD.bazel  compiler.sh  krait_standard_library.bzl  linked_list.krait  option.krait
src/standard_library/krait/: BUILD.bazel  conversions.krait  either.krait  io.krait  iterator.krait  linked_list.krait  math.krait  option.krait  range.krait  sequence.krait
src/standard_library/native/io/: BUILD.bazel  main.go
src/standard_library/native/math/: BUILD.bazel  main.go
tests/: BUILD.bazel  __init__.py  test_empty.py  test_interpreter.py  test_module_loader.py  test_runtime.py  tests.py
tests/builtin/functions/: BUILD.bazel  test_if_else.py  test_module.py  test_output.py  test_struct.py  test_tuple.py
tests/builtin/types/: BUILD.bazel  test_arithmetic.py  test_booleans.py  test_string_manipulation.py
tests/constructs/: BUILD.bazel  test_anonymous_functions.py  test_functions.py  test_if_expressions.py  test_parentheses.py  test_selects.py  test_struct.py  test_tuples.py  test_values.py
tests/data/: arithmetic.krait  arithmetic_comparison.krait  arithmetic_precedence.krait  boolean.krait  call_nested.krait  call_prefix.krait  call_return_value.krait  function_basic.krait  function_nested.krait  if.krait  if_else.krait  if_else_if.krait  if_else_if_else.krait  parentheses.krait  select.krait
tests/foreign_function_interface/: BUILD.bazel  test_foreign_function_interface.py
tests/foreign_function_interface/test_libraries/: BUILD.bazel  main.go
tests/syntax/: BUILD.bazel  test_functions.py  test_parentheses.py  test_selects.py
