"""The main module."""

module(name = "project_umbrella", version = "0.1")

bazel_dep(name = "gazelle", version = "0.31.0")
bazel_dep(name = "rules_go", version = "0.39.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src/interpreter:go.mod")

use_repo(
    go_deps,
    "com_github_dlclark_regexp2",
    "com_github_ugorji_go_codec",
)
