""" The main module. """

module(name = "project_umbrella", version = "0.1")

bazel_dep(name = "gazelle", version = "0.34.0")
bazel_dep(name = "rules_go", version = "0.43.0")
bazel_dep(name = "rules_python", version = "0.22.0")

# Go
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//src/interpreter:go.mod")

use_repo(
    go_deps,
    "com_github_alecthomas_participle_v2",
    "com_github_benbjohnson_immutable",
    "com_github_dlclark_regexp2",
    "com_github_puzpuzpuz_xsync_v3",
    "com_github_ugorji_go_codec",
)

# Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    name = "python",
    python_version = "3.10",
)

python_interpreter = use_extension("@rules_python//python/extensions:interpreter.bzl", "interpreter")
python_interpreter.install(
    name = "python_interpreter",
    python_name = "python",
)

use_repo(python_interpreter, "python_interpreter")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "python_deps",
    python_interpreter_target = "@python_interpreter//:python",
    requirements_lock = "//tests:requirements.txt",
)

use_repo(pip, "python_deps")
