load("@python_deps//:requirements.bzl", "requirement")

py_library(
	name = "tests-library",
	srcs = ["__init__.py"],
	data = [
		"//src/interpreter",
		"//src/standard_library",
	],
	visibility = [":__subpackages__"],
)

py_test(
	name = "tests",
	srcs = glob(["*.py"], exclude=["__init__.py"]),
	deps = [
		":tests-library",
		"//tests/builtin/functions",
		"//tests/builtin/types",
		"//tests/constructs",
		"//tests/foreign_function_interface",
		requirement("pytest"),
	],
)
