load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "interpreter_library",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter",
    deps = [
        "//src/interpreter/errors",
        "//src/interpreter/errors/entry_errors",
        "//src/interpreter/loader/module_loader",
    ],
)

go_binary(
    name = "interpreter",
    embed = [":interpreter_library"],
    visibility = ["//visibility:public"],
)
