load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bytecode_generator",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/bytecode_generator",
    visibility = [
        "//src/interpreter:__pkg__",
        "//src/interpreter/runtime:__pkg__",
    ],
    deps = [
        "//src/interpreter/bytecode_generator/built_ins",
        "//src/interpreter/common",
        "//src/interpreter/errors",
        "//src/interpreter/errors/parser_errors",
        "//src/interpreter/parser",
        "@com_github_ugorji_go_codec//:go_default_library",
    ],
)
