load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "new_parser_library",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/parser",
    visibility = ["//src/interpreter:__subpackages__"],
    deps = [
        "//src/interpreter/parser",
        "@com_github_alecthomas_participle_v2//:go_default_library",
        "@com_github_alecthomas_participle_v2//lexer",
    ],
)

go_binary(
    name = "new_parser",
    embed = [":new_parser_library"],
    visibility = ["//visibility:public"],
)
