load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "parser",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/parser",
    visibility = [
        "//src/interpreter/bytecode_generator:__pkg__",
        "//src/interpreter/loader:__subpackages__",
    ],
    deps = [
        "//src/interpreter/common",
        "//src/interpreter/errors",
        "//src/interpreter/errors/lexer_errors",
        "//src/interpreter/parser/parser_types",
        "@com_github_alecthomas_participle_v2//:go_default_library",
        "@com_github_alecthomas_participle_v2//lexer",
        "@com_github_dlclark_regexp2//:go_default_library",
    ],
)
