load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runtime",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime",
    visibility = ["//src/interpreter:__pkg__"],
    deps = [
        "//src/interpreter/bytecode_generator",
        "//src/interpreter/bytecode_generator/built_ins",
        "//src/interpreter/common",
        "//src/interpreter/errors",
        "//src/interpreter/errors/runtime_errors",
        "//src/interpreter/parser/parser_types",
    ],
)
