load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runtime",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime",
    visibility = [
        "//src/interpreter/loader:__subpackages__",
        "//src/interpreter/runtime:__subpackages__",
    ],
    deps = [
        "//src/interpreter/bytecode_generator",
        "//src/interpreter/common",
        "//src/interpreter/loader",
    ],
)
