load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runtime",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime",
    visibility = ["//visibility:public"],
    deps = [
        "//src/interpreter/bytecode_generator",
        "//src/interpreter/common",
        "//src/interpreter/loader",
    ],
)
