load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "built_in_declarations",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/bytecode_generator/built_in_declarations",
    visibility = ["//src/interpreter:__subpackages__"],
    deps = ["//src/interpreter/parser/parser_types"],
)
