load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "parser_errors",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/errors/parser_errors",
    visibility = ["//src/interpreter:__subpackages__"],
	deps = [
        "//src/interpreter/errors",
        "@com_github_alecthomas_participle_v2//:go_default_library",
    ],
)
