load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "file_loader",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/loader/file_loader",
    visibility = ["//src/interpreter/loader/module_loader:__pkg__"],
    deps = [
        "//src/interpreter/bytecode_generator",
        "//src/interpreter/common",
        "//src/interpreter/environment_variables",
        "//src/interpreter/errors",
        "//src/interpreter/errors/entry_errors",
        "//src/interpreter/errors/parser_errors",
        "//src/interpreter/loader",
        "//src/interpreter/parser",
        "//src/interpreter/runtime/runtime_executor",
        "//src/interpreter/runtime/value",
        "@com_github_alecthomas_participle_v2//:go_default_library",
    ],
)
