load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "built_in_definitions",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime/built_in_definitions",
    visibility = ["//src/interpreter/runtime:__subpackages__"],
	deps = [
		"//src/interpreter/bytecode_generator/built_in_declarations",
		"//src/interpreter/errors",
		"//src/interpreter/errors/runtime_errors",
		"//src/interpreter/loader",
		"//src/interpreter/parser/parser_types",
		"//src/interpreter/runtime",
		"//src/interpreter/runtime/value",
		"//src/interpreter/runtime/value_types",
		"//src/interpreter/runtime/value_types/function",
		"//src/interpreter/runtime/value_util",
	],
)
