load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "runtime_executor",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime/runtime_executor",
    visibility = ["//src/interpreter:__pkg__"],
	deps = [
		"//src/interpreter/bytecode_generator",
		"//src/interpreter/bytecode_generator/built_ins",
		"//src/interpreter/common",
		"//src/interpreter/runtime",
		"//src/interpreter/runtime/built_in_definitions",
		"//src/interpreter/runtime/value",
		"//src/interpreter/runtime/value_types",
		"//src/interpreter/runtime/value_types/bytecode_function",
	],
)
