load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "value_types",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime/value_types",
    visibility = ["//src/interpreter/runtime:__subpackages__"],
	deps = [
		"//src/interpreter/bytecode_generator/built_in_declarations",
		"//src/interpreter/errors",
		"//src/interpreter/errors/runtime_errors",
		"//src/interpreter/runtime",
		"//src/interpreter/runtime/value",
		"//src/interpreter/runtime/value_types/function",
	],
)
