load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "math",
    srcs = glob(["*.go"]),
	linkmode = "plugin",
    visibility = ["//src/standard_library:__pkg__"],
    deps = [
        "//src/interpreter/errors",
        "//src/interpreter/errors/runtime_errors",
        "//src/interpreter/parser/parser_types",
        "//src/interpreter/runtime",
        "//src/interpreter/runtime/value",
        "//src/interpreter/runtime/value_types",
        "//src/interpreter/runtime/value_types/function",
    ],
)
