load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bytecode_function",
    srcs = glob(["*.go"]),
    importpath = "project_umbrella/interpreter/runtime/value_types/bytecode_function",
    visibility = ["//src/interpreter/runtime:__subpackages__"],
	deps = [
		"//src/interpreter/bytecode_generator",
		"//src/interpreter/bytecode_generator/built_ins",
		"//src/interpreter/common",
		"//src/interpreter/errors",
		"//src/interpreter/errors/runtime_errors",
		"//src/interpreter/parser/parser_types",
		"//src/interpreter/runtime",
		"//src/interpreter/runtime/built_in_definitions",
		"//src/interpreter/runtime/value",
		"//src/interpreter/runtime/value_types",
		"//src/interpreter/runtime/value_types/function",
		"//src/interpreter/runtime/value_util",
	],
)
